--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
-            <p>Doutorando na Universidade de São Paulo (USP), onde contribui junto ao Instituto de Ciências Matemáticas e de Computação (ICMC), campus de São Carlos. Possui 12 anos de experiência na área de desenvolvimento de software, com ênfase na análise, construção e arquitetura de sistemas Web e Mobile. Além disso, é certificado nas plataformas .NET (Microsoft), Java (Oracle) e Android (Google). Atualmente é Líder Técnico no time de Educação da DIO, onde é responsável por orquestrar os conteúdos educacionais da plataforma.</p>
+            <p>Cursando Análise e Desenvolvimento de Sistemas. Amante da tecnologia e sempre atento as novidades e atualizações. Apaixonado por desenvolvimento back end e front end e frameworks que agilizam a produção do trabalho. Formado em educação física e pós-graduado em Gerontologia. Por alguns anos responsável por grupos de treinamento e condicionamento de idosos. Além da vivência com atendimento ao público. Extremamente comunicativo e resiliente para novos desafios.</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -98,9 +98,9 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
+              <h5 class="w3-opacity"><b>Adicionar</b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Planejar o roadmap dos conteúdos educacionais da plataforma, tendo em vista as principais tendências de mercado e necessidades das empresas parceiras. Além de garantir que as experiências de aprendizagem tenham total sinergia com a nossa metodologia educacional.</p>
+              <p>Adicionar</p>
             </div>
           </div>
   
@@ -109,25 +109,23 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <h5 class="w3-opacity"><b>CENTRO UNIVERSITÁRIO INTERNACIONAL - UNINTER
+              </b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
-                Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
+                A melhor Universidade de ensino a distancia do Brasil. Mais de 1.700 colaboradores a serviço de mais de 440 mil alunos ativos, a marca mais lembrada em EAD por 13 anos consecutivos – Top Educação, 55 cursos nota máxima (5) no MEC e 21 com nota 4 (conceito ótimo), mais de 400 cursos de graduação, pós-graduação, mestrado, doutorado e extensão e presente em mais de 750 polos pelo Brasil.
               </p>
               <ul>
-                <li><a href="https://www.dio.me/certificate/762101D2" target="_blank">Formação: Programação Reativa com Spring WebFlux (36h)</a></li>
-                <li><a href="https://www.dio.me/certificate/07041B99" target="_blank">Curso: Desenvolvimento Mobile Nativo Para Android (1h)</a></li>
-                <li><a href="https://www.dio.me/certificate/F12AC30B" target="_blank">Curso: Componentes, Layouts e UI/UX Em Apps Android (3h)</a></li>
-                <li><a href="https://www.dio.me/certificate/3FB20BF1" target="_blank">Curso: Java e Kotlin Juntos!? Construindo Apps Android (3h)</a></li>
+                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
+                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
+                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
+                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Universidade de São Paulo (USP)</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Dezembro 2018 - Agosto 2023</h6>
-              <p>Doutorando em Engenharia de Computação com foco em acessibildiade de conteúdos educacionais.</p>
+              <h5 class="w3-opacity"><b>Adicionar</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Descrição</p>
             </div>
           </div>
 
@@ -138,17 +136,17 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">falvojr/copa-2022-android</a>
+                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">Adicionar</a>
               </h6>
-              <p>App Android Nativo utilizando a arquitetura MVVM com Kotlin e diversas features do Android Jetpack.</p>
+              <p>Descrição</p>
               <hr>
             </div>
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="https://gitlab.com/denilsonbonatti/kubernetes-projeto2-dio" target="_blank">denilsonbonatti/kubernetes-projeto2-dio</a>
+                <a href="#" target="_blank">Link projeto</a>
               </h6>
-              <p>Repositório no GitLab com um pipeline configurado em Kubernetes.</p>
+              <p>Descrição</p>
             </div>
           </div>
   
@@ -163,8 +161,8 @@
   
     <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="https://github.com/falvojr" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="https://www.linkedin.com/in/falvojr" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+      <a href="https://github.com/Anderson-Karlos" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="www.linkedin.com/in/anderson-karlos-a786a0144" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
