--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
           <div class="w3-white w3-text-grey w3-card-4">
             <!-- @falvojr: This container has been modified to not use a profile picture. -->
             <div class="w3-container">
-              <h2>Venilton FalvoJr</h2>
+              <h2>Anderson Karlos de Luna Ramalho Santos</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Desenvolvedfo Front-end</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Desenvolvedor Front-end</p>
               <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>João Pessoa-PB, Brasil</p>
               <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>andersonk.dev@gmail.com</p>
               <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(63) 99111-7777</p>
@@ -98,9 +98,24 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Adicionar</b></h5>
-              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2021 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
-              <p>Adicionar</p>
+              <h5 class="w3-opacity"><b>Assistente Administrativo</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro/2017 – Atualmente - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <p>Principais atividades: Prescrição e acompanhamento de treinos em academias e residências no município de João Pessoa - PB.</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Personal Trainer</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro/2023 – Atualmente - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <p>Principais atividades: Atendimento ao público, aos alunos e aos professores na coordenação de cursos.</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Técnico em Laboratório de Avaliação Física</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro/2022 – Dezembro/2022</h6>
+              <p>Principais atividades: Atendimento ao público interno e externo do UNIPÊ, realização de avaliação física, antropométrica e motora, pesquisas científicas, capacitação dos alunos da área de saúde, ministrando aulas e extensões, experiência em equipamentos e testes de avaliação física. Atendimento aos alunos do Curso de Educação Física e ao público na coordenação do curso.</p>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Técnico em Manutenção de Computadores e Redes de Internet</b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Janeiro/2022 – Dezembro/2022</h6>
+              <p>Principais	atividades:	Montagem	e	manutenção	de	computadores, configuração de computadores com a rede local.</p>
             </div>
           </div>
   
