--- a/index.html
+++ b/index.html
@@ -124,17 +124,22 @@
               <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>CENTRO UNIVERSITÁRIO INTERNACIONAL - UNINTER
+              <h5 class="w3-opacity"><b>TECNÓLOGO - ANÁLISE E DESENVOLVIMENTO DE SISTEMAS - CENTRO UNIVERSITÁRIO INTERNACIONAL(UNINTER)
               </b></h5>
               <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Março 2022 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 A melhor Universidade de ensino a distancia do Brasil. Mais de 1.700 colaboradores a serviço de mais de 440 mil alunos ativos, a marca mais lembrada em EAD por 13 anos consecutivos – Top Educação, 55 cursos nota máxima (5) no MEC e 21 com nota 4 (conceito ótimo), mais de 400 cursos de graduação, pós-graduação, mestrado, doutorado e extensão e presente em mais de 750 polos pelo Brasil.
               </p>
+              <h5 class="w3-opacity"><b>PÓS-GRADUAÇÃO - ENGENHARIA DE SOFTWARE COM MÉTODOS ÁGEIS - CRUZEIRO DO SUL VIRTUAL
+              </b></h5>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Maio 2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
+              <p>
+                Com mais de 50 anos de atuação, é um dos maiores grupos de educação do Brasil, com 14 instituições de ensino superior e cinco de educação básica. Atua nacionalmente por meio de marcas próprias, oferecendo formação acadêmico-profissional de qualidade desde o ensino básico, até cursos de graduação, pós-graduação e extensão nas modalidades presencial e a distância.
+              </p>
               <ul>
-                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
-                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
-                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
-                <li><a href="#" target="_blank">Adicionar formação ou curso</a></li>
+                <li><a href="#" target="_blank">Pós-graduado em Gerontologia - PÒS-FIP, concluído em 2018.1.</a></li>
+                <li><a href="#" target="_blank">Graduado em Educação Física Licenciatura – UNIPÊ, concluído em 2017.2.</a></li>
+                <li><a href="#" target="_blank">Graduado em Educação Física Bacharelado - UNIPÊ, concluído em 2016.2.</a></li>
               </ul>
               <hr>
             </div>
@@ -151,17 +156,38 @@
             <div class="w3-container">
               <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="https://github.com/falvojr/copa-2022-android" target="_blank">Adicionar</a>
+                <a href="https://github.com/Anderson-Karlos/pokedex-js-css.git  " target="_blank">Pokedex</a>
               </h6>
-              <p>Descrição</p>
+              <p>Projeto de Conclusão de curso de Java Script da DIO. Projeto utilizando as tecnologias: HTML, CSS, Java Script e em especial utilizamos o Node JS para acessar uma web API para buscar os dados necessários.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h6 class="w3-text-indigo">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="#" target="_blank">Link projeto</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Anderson-Karlos/Jogo-da-mem-ria.git" target="_blank">Jogo da Memória</a>
               </h6>
-              <p>Descrição</p>
+              <p>Projeto de conclusão de curso da DIO. Projeto criado utilizando as tecnologias: HTML, CSS e Java Script. Focado apenas na funcionalidade do jogo.</p>
+            </div>
+            <div class="w3-container">
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Anderson-Karlos/projeto-dio-github.git" target="_blank">Buscador de GitHub em React</a>
+              </h6>
+              <p>Projeto de conclusão do módulo ReactJS. Interface feita com React que busca por usuários do GitHub, mostra suas informações, seus repositórios e os repositórios favoritados.</p>
+            </div>
+            <div class="w3-container">
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Anderson-Karlos/angular-blog.git" target="_blank">Modelo de Blog em Angular</a>
+              </h6>
+              <p>Blog Criado utilizando Angular Baseando em um modelo ja existente. Conclusão do módulo do Curso de Angula da DIO.</p>
+            </div>
+            <div class="w3-container">
+              <h6 class="w3-text-indigo">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/Anderson-Karlos/angular-buzzfeed.git" target="_blank">Clone Buzzfeed em Angular</a>
+              </h6>
+              <p>Projeto muito conhecido e bastante usado para varias finalidades tanto como profissional como para entretenimento. Feito com Angular para treinar os conhecimentos adquiridos do curso de Angula da DIO.</p>
             </div>
           </div>
   
